# plasmaCADCAM

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_bindgen.sh  index.html  plasmaCADCAM.code-workspace  web.js  web_bg.wasm
assets/: cursor-edit-arc.cur  cursor-edit-bezier.cur  cursor-edit-circle.cur  cursor-edit-line.cur  cursor-edit-square.cur
css/: styles.css
js/: canvas.js  math.js  shapes.js
src/: bindings.rs  canvas.rs  datapool.rs  lib.rs  math.rs  pools.rs  prefab.rs  shape.rs  shapes.rs  shapes_pool.rs  types.rs
src/basic_shapes/: arc_ellipse.rs  basic_shapes.rs  cubic_bezier.rs  prefab.rs  quad_bezier.rs  segment.rs
src/shapes/: cubicbezier.rs  ellipse.rs  group.rs  line.rs  quadbezier.rs  rectangle.rs  shapes.rs  types.rs
